2004-12-13  Alexey Shchepin  <alexey@sevcom.net>

	* src/odbc/pg.sql: DB creation script for postgres

	* src/odbc/ejabberd_odbc.erl: Experimental support for ODBC
	* src/mod_last_odbc.erl: Likewise
	* src/mod_offline_odbc.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise
	* src/ejabberd_auth.erl: Likewise

2004-12-12  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_stats.erl: Minor optimizations

	* src/ejabberd_sm.erl: Added unset_presence_hook
	* src/mod_last.erl: Use unset_presence_hook instead of direct call

	* src/ejabberd_auth.erl: Splitted into ejabberd_auth_internal.erl,
	ejabberd_auth_ldap.erl, and ejabberd_auth_external.erl,
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_ldap.erl: Likewise
	* src/ejabberd_auth_external.erl: Likewise

2004-12-05  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Changed type of password field
	to "password"

	* src/jlib.hrl: More stream error defines (thanks to Sergei
	Golovan)

	* src/ejabberd_c2s.erl: Support for starttls_required option
	(thanks to Sergei Golovan)

	* src/mod_muc/mod_muc_room.erl: Fixed mistake in case condition
	(thanks to Sergei Golovan)

	* src/xml_stream.erl: Added function parse_element/1

	* src/expat_erl.c: Added PARSE_FINAL_COMMAND

2004-12-03  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_listener.erl: Enable keepalive option

	* src/xml_stream.erl: Added API for managing xml streams without
	creating process
	* src/ejabberd_receiver.erl: Use this API, now 2 processes are
	created per C2S connection

2004-12-01  Alexey Shchepin  <alexey@sevcom.net>

	* src/expat_erl.c: Now uses port control instead of port output
	* src/xml_stream.erl: Likewise

2004-11-30  Alexey Shchepin  <alexey@sevcom.net>

	* src/stringprep/stringprep.erl: Now register port instead of
	storing it in ets table

2004-11-28  Alexey Shchepin  <alexey@sevcom.net>

	* doc/guide.tex: Updated URLs to R10C release

2004-11-20  Alexey Shchepin  <alexey@sevcom.net>
