@@ -1,3 +1,8 @@
+2004-12-14  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/ejabberd_sm.erl: Updated missed message passing from
+	previous patch
+
 2004-12-13  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/odbc/pg.sql: DB creation script for postgres
